if we run compiling tests ad java9+ we need addd few params for compiling tests.